--- a/src/componants/HomeSection/HomeSection.scss
+++ b/src/componants/HomeSection/HomeSection.scss
@@ -5,10 +5,14 @@
 	justify-content: space-evenly;
 	align-items: center;
 	flex: 1;
-	// padding: 2rem;
 	padding: 4rem 2rem 5rem;
 	flex-wrap: wrap;
 	background: var(--app-gradient);
+
+	// display: grid;
+	// place-items: center;
+	// grid-template-columns: 1fr 1fr;
+	// gap: 0.5rem;
 
 	@media screen and (max-width: 970px) {
 		padding: 4rem 1.5rem 5rem;
@@ -26,13 +30,14 @@
 		margin-top: 3rem;
 	}
 	@media screen and (max-width: 400px) {
-		margin-top: 2rem;
+		margin-top: 2.5rem;
 	}
 	h1 {
 		font-size: 6rem;
-		font-weight: 800;
+		font-weight: 500;
 		text-shadow: 0px 0px 2px #fff;
 		letter-spacing: 5px;
+		// border: 1px solid;
 	}
 	.app__home-name {
 		text-shadow: none;
@@ -105,9 +110,13 @@
 }
 
 .app__home-introimage {
-	// border: 1px solid;
+	width: 60vmin;
 	img {
-		height: 70vmin;
+		max-height: 500px;
+		// width: 100%;
+		object-fit: contain;
+		// height: 70vmin;
+		width: 60vmin;
 		filter: drop-shadow(2px 2px 10px var(--primarybg));
 		animation: floating 1.5s 2s ease-in-out infinite alternate;
 
