--- a/src/componants/LoadingButton/LoadingButton.scss
+++ b/src/componants/LoadingButton/LoadingButton.scss
@@ -27,6 +27,7 @@
 	color: #fff;
 	border-radius: 0.4em;
 	max-width: 220px;
+	cursor: pointer;
 
 	&.animation {
 		background-color: transparent;
@@ -74,6 +75,9 @@
 		left: 51%;
 		right: 51%;
 	}
+}
+.svg-container {
+	display: none;
 }
 
 .btn.animation.complete + .svg-container {
