--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+@font-face {
+	font-family: "poppins";
+	src: local("Poppins"),
+		url("./fonts/poppins-regular-webfont.woff2") format("woff2"),
+		url("./fonts/poppins-regular-webfont.woff") format("woff");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "poppins";
+	src: local("Poppins"),
+		url("./fonts/poppins-medium-webfont.woff2") format("woff2"),
+		url("./fonts/poppins-medium-webfont.woff") format("woff");
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "poppins";
+	src: local("Poppins"),
+		url("./fonts/poppins-extrabold-webfont.woff2") format("woff2"),
+		url("./fonts/poppins-extrabold-webfont.woff") format("woff");
+	font-weight: 800;
+	font-style: normal;
+}
+
 *,
 *::after,
 *::before {
@@ -9,7 +36,10 @@
 
 :root {
 	background-color: #130143;
-	font-family: "Poppins", sans-serif;
+	font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont,
+		"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+		sans-serif;
+	line-height: 1.5;
 	--app-gradient: radial-gradient(circle at 45% 90%, #130143 0%, #02040e 100%);
 	--white-color: #ffffff;
 	--dim-white: rgba(250, 250, 250, 0.6);
