--- a/src/componants/HomeSection/HomeSection.scss
+++ b/src/componants/HomeSection/HomeSection.scss
@@ -70,7 +70,8 @@
 		margin-top: 1rem;
 		margin-bottom: 1rem;
 		border-radius: 12px;
-		background-color: var(--secondarybg);
+		// background-color: var(--secondarybg);
+		background-color: #1b035f;
 		box-shadow: 2px 2px 5px var(--primarybg);
 		cursor: pointer;
 		a {
